
==== Major changes ====

==== New classes ====

==== API changes ====
 * Removed deprecated MultiStart::setStartingPoints/getStartingPoints
 * Removed deprecated KarhunenLoeveResult::getEigenValues
 * Removed deprecated coupling_tools.execute is_shell/workdir/shell_exe/check_exit_code arguments
 * RandomVector::get/setParameter and getParameterDescription available to PythonRandomVector

=== Documentation ===

=== Python module ===

=== Miscellaneous ===

=== Bug fixes ===
 * #1842 (libOT.so.0.0.0 doesn't have a SONAME)
 * #1843 (Ali-Mikhail-Haq copula parameter value)
 * #1844 (MaximumDistribution::computePDF is wrong when all the marginals are equal and independent)
 * #1845 (MemoizeFunction does not propagate to finite difference gradient&hessian)
 * #1847 (ParametricFunction require unnecessary function evaluations)
 * #1861 (Still some instabilities in Kriging with ot.StationaryFunctionalCovarianceModel)


== 1.17 release (2021-05-12) == #release-1.17

=== Library ===

==== Major changes ====

==== New classes ====
 * VertexValuePointToFieldFunction
 * KarhunenLoeveReduction
 * KarhunenLoeveValidation
 * IsotropicCovarianceModel
 * KroneckerCovarianceModel
 * VonMisesFactory
 * KFoldSplitter, LeaveOneOutSplitter

==== API changes ====
 * Removed deprecated Pairs alias
 * Removed deprecated SORMResult::getEventProbabilityHohenBichler/getGeneralisedReliabilityIndexHohenBichler
 * Removed deprecated OptimizationResult::getLagrangeMultipliers, OptimizationAlgorithm::computeLagrangeMultipliers
 * Removed deprecated FittingTest::Kolmogorov, FittingTest::BestModelKolmogorov (DistributionFactory argument only)
 * Deprecated Sample::computeStandardDeviationPerComponent, use computeStandardDeviation
 * Deprecated KarhunenLoeveResult::getEigenValues, use getEigenvalues
 * Removed StationaryCovarianceModel
 * CovarianceModel.computeAsScalar allows scalars
 * Swapped SimulatedAnnealingLHS constructor SpaceFilling/TemperatureProfile arguments