@@ -4,6 +4,8 @@
 OT_CovarianceModel_doc
 %feature("docstring") OT::CovarianceModel::computeAsScalar
 OT_CovarianceModel_computeAsScalar_doc
+%feature("docstring") OT::CovarianceModel::computeCrossCovariance
+OT_CovarianceModel_computeCrossCovariance_doc
 %feature("docstring") OT::CovarianceModel::discretize
 OT_CovarianceModel_discretize_doc
 %feature("docstring") OT::CovarianceModel::discretizeAndFactorize
